Fix login page input alignment on Safari

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -366,6 +366,7 @@ em {
   }
   .input {
     width: 320px;
+    margin: auto;
     &.email {
       border-radius: 3px 3px 0 0;
     }
